# yadro_test_tatlin

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  config-loader.cpp  config-loader.h  main.cpp
cmake/: Dependencies.cmake
include/config/: config-loader.h
include/exceptions/: exceptions.h
include/sort/: tape-sorter.h
include/tape/: file-tape.h  tape.h
include/utils/: temp-dir-guard.h  temp-file-manager.h
src/: CMakeLists.txt
src/config/: config-loader.cpp
src/exceptions/: exceptions.cpp
src/sort/: tape-sorter.cpp
src/tape/: file-tape.cpp  tape.cpp
src/utils/: temp-dir-guard.cpp
tests/: CMakeLists.txt  config-loader-test.cpp  file-tape-test.cpp  tape-sorter-test.cpp
tests/utils/: utils.cpp  utils.h
